--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "daisyui": "^2.51.3",
     "json-server": "^0.17.2",
     "react": "^18.2.0",
+    "react-cookie": "^4.1.1",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
     "react-router-dom": "^6.8.2",
